tests/invalid/root_bad_escape.nano
"not a valid \u0041 escape"
